--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
 
   
-  <title>RabiCode</title>
+  <title>欢迎来到兔窝(*ﾟ∀ﾟ*)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta property="og:type" content="website">
 <meta property="og:title" content="Hexo">
@@ -36,7 +36,7 @@
   <div id="header-outer" class="outer">
     <div id="header-title" class="inner">
       <h1 id="logo-wrap">
-        <a href="/" id="logo">Hexo</a>
+        <a href="/" id="logo">Rabicode</a>
       </h1>
       
     </div>
